# rust-axum-demo

./: .editorconfig  .gitignore  Cargo.toml  README.md  bacon.toml  build.rs  docker-compose.yml  sample.env  sqlx-data.json
migrations/: 01-init.sql  01_init.sql
src/: cli.rs  context.rs  main.rs  telemetry.rs
src/db/: link_visit.rs  links.rs  mod.rs
src/routes/: errors.rs  links.rs  mod.rs
