[package]
name = "rust-axum-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.16", features = ["env", "derive"] }
dotenvy = { version = "0.15.7", features = ["clap"] }
anyhow = "1.0.72"
tokio = { version = "1.29.1", features = ["full"] }

axum = { version = "0.6.19", features = ["tower-log", "http2", "headers"] }
axum-tracing-opentelemetry = "0.10.0"
tower = "0.4.13"
tower-http = { version = "0.4.1", features = [
    "trace",
    "normalize-path",
    "limit",
    "timeout",
] }
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "offline",
    "json",
    "chrono",
] }
chrono = { version = "0.4.23", features = ["serde"] }
humantime = "2.1.0"
humantime-serde = "1.1.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.93"

tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.16", features = [
    "fmt",
    "std",
    "ansi",
    "env-filter",
] }

opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.11.0", features = ["grpc-tonic"] }
opentelemetry-prometheus = "0.11.0"
opentelemetry-semantic-conventions = "0.10.0"
sentry = { version = "0.31.5", default-features = false, features = [
    "rustls",
    "sentry-tracing",
    "backtrace",
    "contexts",
    "panic",
    "reqwest",
] }
sentry-tracing = "0.31.5"
tracing-error = "0.2.0"
nanoid = "0.4.0"
